Update hero section, fix video path, add courts section

--- a/index.html
+++ b/index.html
@@ -104,169 +104,224 @@
     </div>
 
     <div class="courts__grid">
-      <!-- Card A -->
+      <!-- A -->
       <article class="court">
-        <div class="court__media">
-          <img src="assets/img/court.webp" alt="Indoor Court A">
-        </div>
+        <div class="court__media"><img src="assets/img/court.webp" alt="Indoor Court A"></div>
         <div class="court__body">
           <div class="court__row">
             <h3 class="court__name">Indoor Court A</h3>
             <span class="badge is-available">Available</span>
           </div>
           <ul class="court__meta">
-            <li>Surface: Synthetic Turf</li>
-            <li>Format: Doubles (2v2)</li>
+            <li>Surface: Synthetic Turf</li><li>Format: Doubles (2v2)</li>
           </ul>
-
           <div class="slots" role="listbox" aria-label="Time slots for Indoor Court A">
+            <button class="slot is-available" data-time="06:00">06:00</button>
+            <button class="slot is-available" data-time="07:00">07:00</button>
             <button class="slot is-available" data-time="08:00">08:00</button>
             <button class="slot is-available" data-time="09:00">09:00</button>
             <button class="slot is-booked" disabled>10:00</button>
             <button class="slot is-available" data-time="11:00">11:00</button>
             <button class="slot is-available" data-time="12:00">12:00</button>
+            <button class="slot is-available" data-time="13:00">13:00</button>
+            <button class="slot is-available" data-time="14:00">14:00</button>
+            <button class="slot is-available" data-time="15:00">15:00</button>
+            <button class="slot is-booked" disabled>16:00</button>
+            <button class="slot is-available" data-time="17:00">17:00</button>
+            <button class="slot is-available" data-time="18:00">18:00</button>
+            <button class="slot is-available" data-time="19:00">19:00</button>
+            <button class="slot is-available" data-time="20:00">20:00</button>
+            <button class="slot is-available" data-time="21:00">21:00</button>
+            <button class="slot is-available" data-time="22:00">22:00</button>
+            <button class="slot is-available" data-time="23:00">23:00</button>
+            <button class="slot is-available" data-time="24:00">24:00</button>
           </div>
-
-          <a href="#booking" class="about__cta court__cta" aria-disabled="true">Book a Court</a>
+          <a href="#booking" class="about__cta court__cta">Book a Court</a>
         </div>
       </article>
 
-      <!-- Card B -->
+      <!-- B -->
       <article class="court">
-        <div class="court__media">
-          <img src="assets/img/court.webp" alt="Indoor Court B">
-        </div>
+        <div class="court__media"><img src="assets/img/court.webp" alt="Indoor Court B"></div>
         <div class="court__body">
           <div class="court__row">
             <h3 class="court__name">Indoor Court B</h3>
             <span class="badge is-limited">Limited</span>
           </div>
           <ul class="court__meta">
-            <li>Surface: Acrylic</li>
-            <li>Format: Doubles (2v2)</li>
+            <li>Surface: Acrylic</li><li>Format: Doubles (2v2)</li>
           </ul>
-
           <div class="slots" role="listbox" aria-label="Time slots for Indoor Court B">
+            <button class="slot is-available" data-time="06:00">06:00</button>
+            <button class="slot is-available" data-time="07:00">07:00</button>
             <button class="slot is-booked" disabled>08:00</button>
             <button class="slot is-available" data-time="09:00">09:00</button>
             <button class="slot is-available" data-time="10:00">10:00</button>
             <button class="slot is-booked" disabled>11:00</button>
             <button class="slot is-available" data-time="12:00">12:00</button>
+            <button class="slot is-available" data-time="13:00">13:00</button>
+            <button class="slot is-available" data-time="14:00">14:00</button>
+            <button class="slot is-available" data-time="15:00">15:00</button>
+            <button class="slot is-available" data-time="16:00">16:00</button>
+            <button class="slot is-available" data-time="17:00">17:00</button>
+            <button class="slot is-booked" disabled>18:00</button>
+            <button class="slot is-available" data-time="19:00">19:00</button>
+            <button class="slot is-available" data-time="20:00">20:00</button>
+            <button class="slot is-available" data-time="21:00">21:00</button>
+            <button class="slot is-available" data-time="22:00">22:00</button>
+            <button class="slot is-available" data-time="23:00">23:00</button>
+            <button class="slot is-available" data-time="24:00">24:00</button>
           </div>
-
-          <a href="#booking" class="about__cta court__cta" aria-disabled="true">Book a Court</a>
+          <a href="#booking" class="about__cta court__cta">Book a Court</a>
         </div>
       </article>
 
-      <!-- Card C -->
+      <!-- C -->
       <article class="court">
-        <div class="court__media">
-          <img src="assets/img/court.webp" alt="Indoor Court C">
-        </div>
+        <div class="court__media"><img src="assets/img/court.webp" alt="Indoor Court C"></div>
         <div class="court__body">
           <div class="court__row">
             <h3 class="court__name">Indoor Court C</h3>
             <span class="badge is-full">Fully Booked</span>
           </div>
           <ul class="court__meta">
-            <li>Surface: Synthetic Turf</li>
-            <li>Format: Singles & Doubles</li>
+            <li>Surface: Synthetic Turf</li><li>Format: Singles & Doubles</li>
           </ul>
-
           <div class="slots" role="listbox" aria-label="Time slots for Indoor Court C">
+            <button class="slot is-booked" disabled>06:00</button>
+            <button class="slot is-booked" disabled>07:00</button>
             <button class="slot is-booked" disabled>08:00</button>
             <button class="slot is-booked" disabled>09:00</button>
             <button class="slot is-booked" disabled>10:00</button>
             <button class="slot is-booked" disabled>11:00</button>
             <button class="slot is-booked" disabled>12:00</button>
+            <button class="slot is-booked" disabled>13:00</button>
+            <button class="slot is-booked" disabled>14:00</button>
+            <button class="slot is-booked" disabled>15:00</button>
+            <button class="slot is-booked" disabled>16:00</button>
+            <button class="slot is-booked" disabled>17:00</button>
+            <button class="slot is-booked" disabled>18:00</button>
+            <button class="slot is-booked" disabled>19:00</button>
+            <button class="slot is-booked" disabled>20:00</button>
+            <button class="slot is-booked" disabled>21:00</button>
+            <button class="slot is-booked" disabled>22:00</button>
+            <button class="slot is-booked" disabled>23:00</button>
+            <button class="slot is-booked" disabled>24:00</button>
           </div>
-
           <a href="#booking" class="about__cta court__cta is-disabled" aria-disabled="true">Join Waitlist</a>
         </div>
       </article>
 
-      <!-- Card D -->
+      <!-- D -->
       <article class="court">
-        <div class="court__media">
-          <img src="assets/img/court.webp" alt="Indoor Court D">
-        </div>
+        <div class="court__media"><img src="assets/img/court.webp" alt="Indoor Court D"></div>
         <div class="court__body">
           <div class="court__row">
             <h3 class="court__name">Indoor Court D</h3>
             <span class="badge is-available">Available</span>
           </div>
           <ul class="court__meta">
-            <li>Surface: Acrylic</li>
-            <li>Format: Doubles (2v2)</li>
+            <li>Surface: Acrylic</li><li>Format: Doubles (2v2)</li>
           </ul>
-
           <div class="slots" role="listbox" aria-label="Time slots for Indoor Court D">
+            <button class="slot is-available" data-time="06:00">06:00</button>
+            <button class="slot is-booked" disabled>07:00</button>
             <button class="slot is-available" data-time="08:00">08:00</button>
             <button class="slot is-booked" disabled>09:00</button>
             <button class="slot is-available" data-time="10:00">10:00</button>
             <button class="slot is-available" data-time="11:00">11:00</button>
             <button class="slot is-available" data-time="12:00">12:00</button>
+            <button class="slot is-available" data-time="13:00">13:00</button>
+            <button class="slot is-available" data-time="14:00">14:00</button>
+            <button class="slot is-available" data-time="15:00">15:00</button>
+            <button class="slot is-available" data-time="16:00">16:00</button>
+            <button class="slot is-available" data-time="17:00">17:00</button>
+            <button class="slot is-available" data-time="18:00">18:00</button>
+            <button class="slot is-available" data-time="19:00">19:00</button>
+            <button class="slot is-available" data-time="20:00">20:00</button>
+            <button class="slot is-available" data-time="21:00">21:00</button>
+            <button class="slot is-available" data-time="22:00">22:00</button>
+            <button class="slot is-available" data-time="23:00">23:00</button>
+            <button class="slot is-available" data-time="24:00">24:00</button>
           </div>
-
           <a href="#booking" class="about__cta court__cta">Book a Court</a>
         </div>
       </article>
 
-      <!-- Card E -->
+      <!-- E -->
       <article class="court">
-        <div class="court__media">
-          <img src="assets/img/court.webp" alt="Indoor Court E">
-        </div>
+        <div class="court__media"><img src="assets/img/court.webp" alt="Indoor Court E"></div>
         <div class="court__body">
           <div class="court__row">
             <h3 class="court__name">Indoor Court E</h3>
             <span class="badge is-limited">Limited</span>
           </div>
           <ul class="court__meta">
-            <li>Surface: Synthetic Turf</li>
-            <li>Format: Singles & Doubles</li>
+            <li>Surface: Synthetic Turf</li><li>Format: Singles & Doubles</li>
           </ul>
-
           <div class="slots" role="listbox" aria-label="Time slots for Indoor Court E">
+            <button class="slot is-available" data-time="06:00">06:00</button>
+            <button class="slot is-available" data-time="07:00">07:00</button>
             <button class="slot is-available" data-time="08:00">08:00</button>
             <button class="slot is-available" data-time="09:00">09:00</button>
             <button class="slot is-booked" disabled>10:00</button>
             <button class="slot is-booked" disabled>11:00</button>
             <button class="slot is-available" data-time="12:00">12:00</button>
+            <button class="slot is-available" data-time="13:00">13:00</button>
+            <button class="slot is-booked" disabled>14:00</button>
+            <button class="slot is-available" data-time="15:00">15:00</button>
+            <button class="slot is-available" data-time="16:00">16:00</button>
+            <button class="slot is-available" data-time="17:00">17:00</button>
+            <button class="slot is-available" data-time="18:00">18:00</button>
+            <button class="slot is-available" data-time="19:00">19:00</button>
+            <button class="slot is-available" data-time="20:00">20:00</button>
+            <button class="slot is-available" data-time="21:00">21:00</button>
+            <button class="slot is-available" data-time="22:00">22:00</button>
+            <button class="slot is-available" data-time="23:00">23:00</button>
+            <button class="slot is-available" data-time="24:00">24:00</button>
           </div>
-
           <a href="#booking" class="about__cta court__cta">Book a Court</a>
         </div>
       </article>
 
-      <!-- Card F -->
+      <!-- F -->
       <article class="court">
-        <div class="court__media">
-          <img src="assets/img/court.webp" alt="Indoor Court F">
-        </div>
+        <div class="court__media"><img src="assets/img/court.webp" alt="Indoor Court F"></div>
         <div class="court__body">
           <div class="court__row">
             <h3 class="court__name">Indoor Court F</h3>
             <span class="badge is-available">Available</span>
           </div>
           <ul class="court__meta">
-            <li>Surface: Acrylic</li>
-            <li>Format: Doubles (2v2)</li>
+            <li>Surface: Acrylic</li><li>Format: Doubles (2v2)</li>
           </ul>
-
           <div class="slots" role="listbox" aria-label="Time slots for Indoor Court F">
-            <button class="slot is-booked" disabled>08:00</button>
+            <button class="slot is-booked" disabled>06:00</button>
+            <button class="slot is-available" data-time="07:00">07:00</button>
+            <button class="slot is-available" data-time="08:00">08:00</button>
             <button class="slot is-available" data-time="09:00">09:00</button>
             <button class="slot is-available" data-time="10:00">10:00</button>
             <button class="slot is-available" data-time="11:00">11:00</button>
             <button class="slot is-available" data-time="12:00">12:00</button>
+            <button class="slot is-available" data-time="13:00">13:00</button>
+            <button class="slot is-available" data-time="14:00">14:00</button>
+            <button class="slot is-available" data-time="15:00">15:00</button>
+            <button class="slot is-available" data-time="16:00">16:00</button>
+            <button class="slot is-available" data-time="17:00">17:00</button>
+            <button class="slot is-available" data-time="18:00">18:00</button>
+            <button class="slot is-available" data-time="19:00">19:00</button>
+            <button class="slot is-available" data-time="20:00">20:00</button>
+            <button class="slot is-available" data-time="21:00">21:00</button>
+            <button class="slot is-available" data-time="22:00">22:00</button>
+            <button class="slot is-available" data-time="23:00">23:00</button>
+            <button class="slot is-available" data-time="24:00">24:00</button>
           </div>
-
           <a href="#booking" class="about__cta court__cta">Book a Court</a>
         </div>
       </article>
     </div>
   </section>
+
 
 
 
