Update root color --beige, add facility section

--- a/index.html
+++ b/index.html
@@ -322,6 +322,40 @@
     </div>
   </section>
 
+  <!-- FACILITY -->
+  <section id="facility" class="facility">
+    <div class="facility__head">
+      <p class="facility__eyebrow">FACILITY</p>
+      <h2 class="facility__title">Our Facilities</h2>
+      <p class="facility__lead">Everything you need for a great padel & lifestyle experience.</p>
+    </div>
+
+    <div class="facility__grid">
+      <article class="facility__item">
+        <div class="facility__icon">🏟️</div>
+        <h3 class="facility__name">Indoor Courts</h3>
+        <p class="facility__desc">Premium lighting and surfaces designed for professional play.</p>
+      </article>
+
+      <article class="facility__item">
+        <div class="facility__icon">☕</div>
+        <h3 class="facility__name">Café & Lounge</h3>
+        <p class="facility__desc">Relax and refuel with our curated menu and cozy atmosphere.</p>
+      </article>
+
+      <article class="facility__item">
+        <div class="facility__icon">🛁</div>
+        <h3 class="facility__name">Locker & Shower</h3>
+        <p class="facility__desc">Stay fresh with clean locker rooms and showers.</p>
+      </article>
+
+      <article class="facility__item">
+        <div class="facility__icon">🚗</div>
+        <h3 class="facility__name">Parking Area</h3>
+        <p class="facility__desc">Spacious and secure parking for all visitors.</p>
+      </article>
+    </div>
+  </section>
 
 
 
