--- a/index.html
+++ b/index.html
@@ -705,10 +705,14 @@
     <!-- Info -->
     <aside class="cinfo" aria-label="South Padel contact information">
       <h3 class="cinfo__title">South Padel</h3>
-      <div class="cinfo__map-embed">
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3965.842155853653!2d106.77737587499098!3d-6.284469893704451!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69f1279dbb8559%3A0x1ed489fd5a315f39!2ssouth%20padel!5e0!3m2!1sen!2sid!4v1757841127622!5m2!1sen!2sid" width="600" height="350" style="border:0;" allowfullscreen loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-      </div>
 
+      <!-- Map embed -->
+      <div class="map-embed">
+        <iframe 
+          src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3965.842155853653!2d106.77737587499098!3d-6.284469893704451!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x2e69f1279dbb8559%3A0x1ed489fd5a315f39!2ssouth%20padel!5e0!3m2!1sen!2sid!4v1757841127622!5m2!1sen!2sid"
+          allowfullscreen loading="lazy" referrerpolicy="no-referrer-when-downgrade">
+        </iframe>
+      </div>
 
       <dl class="cinfo__list">
         <div><dt>Phone</dt><dd><a href="tel:+62123456789">+62 812-3456-789</a></dd></div>
@@ -767,6 +771,7 @@
     </div>
   </div>
 </section>
+
 
 <!-- ===== FAQ ===== -->
 <section id="faq" class="faq">
